--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 /*--------------------------------------------*/
 
 .container {
-    width: min(100% - 30px, 1200px);
+    width: min(100% - 30px, 480px);
     margin-inline: auto;
 }
 
@@ -24,23 +24,49 @@
 /*--------------------------------------------*/
 
 body {
-    background: #171921;
-    font-family: 'Exo 2', sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background: #2a6db5;
+  font-family: "Press Start 2P", system-ui;
+}
+
+main {
+    min-height: calc(100vh - 60px);
 }
 
 /*--------------------------------------------*/
 /*Main                                        */
 /*--------------------------------------------*/
 
-h2 {
+.title {
+    font-size: 15px;
+}
+
+.subtitle {
+    margin: 20px 0;
+    font-size: 10px;
+}
+
+.guesses-left {
+    width:auto;
+    height: 50px;
+    
+    h2 {
+        font-size: 15px;
+    }
+}
+
+.guesses-left {
     color: #fff;
     font-size: 30px;
+    line-height: 50px;
 }
 
 .flip-card {
     margin: 20px 0;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     position: relative;
     transform-style: preserve-3d;
@@ -57,7 +83,7 @@ h2 {
     background-color: #fff;
     text-align: center;
     cursor: not-allowed;
-    font-size: 25px;
+    font-size: 50px;
 }
 
 .back {
@@ -65,7 +91,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightblue; 
+    background-color: rgb(151, 170, 177); 
     position: absolute;
     inset: auto;
     width: 100%;
@@ -78,41 +104,56 @@ h2 {
 }
 
 .guess {
-    margin-left:20px;
     width: 100px;
-    height:50px;
-    background-color: #fff;
-    color: #ff00ff;
-    border-radius: 10px;
+    height:40px;
+    background-color: #148396;
+    color: #fff;
+    border-radius: 5px;
     cursor: not-allowed;
+    box-shadow: 4px 4px 6px #0f0f0f;
+    font-size: 12px;
+}
+
+.guess:hover {
+    transition: ease-in-out 0.25s;
+    background-color: #044853;
 }
 
 .output {
+    margin-top: 30px;
     width:450px;
     height: 50px;
-    background-color: #990099; 
-    font-size: 35px;
-    color:#fff;
-    border-radius: 10px;
+    background-color: #1e237d; 
+    font-size: 15px;
+    color:#e64040;
+    border-radius: 5px;
     text-align: center;
     line-height: 50px;
     cursor: not-allowed;
 }
 
 .play {
-    position: fixed;
-    inset: 50px 50px auto auto;
-    width: 200px;
-    height:50px;
-    background-color: #fff;
-    color:#ff00ff;
-    border-radius: 10px;
-    font-size: 30px;
+    width: 100px;
+    height:40px;
+    background-color: #a82b2b;
+    color:#fff;
+    border-radius: 5px;
+    font-size: 12px;
+    box-shadow: 4px 4px 6px #0f0f0f;
 }
 
 .play:hover {
-    background: #e4e2e2;
+    background: #6e1818;
     transition: ease-in-out 0.25s;
 }
 
+/*--------------------------------------------*/
+/*Footer                                      */
+/*--------------------------------------------*/
 
+footer {
+    height: 60px;
+    color:#fff;
+    line-height: 72px;
+    font-size: 10px;
+}
