--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 main {
-    min-height: calc(100vh - 60px);
+    min-height: calc(100vh - 50px);
 }
 
 /*--------------------------------------------*/
@@ -40,17 +40,18 @@ main {
 /*--------------------------------------------*/
 
 .title {
+    margin-top:50px;
     font-size: 15px;
 }
 
 .subtitle {
     margin: 20px 0;
-    font-size: 10px;
+    font-size: 8px;
 }
 
 .guesses-left {
     width:auto;
-    height: 50px;
+    height: 40px;
     
     h2 {
         font-size: 15px;
@@ -91,7 +92,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(151, 170, 177); 
+    background-color: #148396; 
     position: absolute;
     inset: auto;
     width: 100%;
@@ -152,8 +153,8 @@ main {
 /*--------------------------------------------*/
 
 footer {
-    height: 60px;
+    height: 50px;
     color:#fff;
-    line-height: 72px;
+    line-height: 50px;
     font-size: 10px;
 }
